[gd_scene load_steps=13 format=3 uid="uid://d1iductknuh4t"]

[ext_resource type="Script" uid="uid://bp31kunt6qkdg" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://ble8nehe03hgb" path="res://Fantasm and Secrets.ttf" id="2_fu7sn"]
[ext_resource type="Texture2D" uid="uid://cy5tnrc16l7m2" path="res://697 Rhone Street.png" id="2_glbon"]
[ext_resource type="AudioStream" uid="uid://vi3i7uibu74g" path="res://01. God of War III Overture.mp3" id="4_jix8l"]
[ext_resource type="Script" uid="uid://cmn0cmxas1fio" path="res://audio_control.gd" id="5_glbon"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("2_glbon")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 0.4745098)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.3217281, 0.32172793, 0.32172796, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.7921569, 0.7921569, 0.7921569, 0.20392157)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(1, 1, 1, 1)
thickness = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
bg_color = Color(0, 0, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = 66.0
offset_right = 14.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -766.5
offset_top = -446.0
offset_right = 685.5
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="Main Buttons" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.25
offset_top = -181.5
offset_right = 324.25
offset_bottom = 181.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 9

[node name="Button" type="Button" parent="Main Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0.78431374)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Start Game "

[node name="Button2" type="Button" parent="Main Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Options "

[node name="Button3" type="Button" parent="Main Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Exit "

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.5
offset_top = -375.0
offset_right = 244.5
offset_bottom = -284.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 90
text = "Blood of Olympus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-313.75, -53.5)
stream = ExtResource("4_jix8l")
autoplay = true
bus = &"Music"

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -429.5
offset_top = -245.0
offset_right = 435.5
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.5
offset_bottom = 130.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "Options 
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Options/Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -235.5
offset_top = 364.5
offset_right = 235.5
offset_bottom = 475.5
grow_horizontal = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
text = "Back "

[node name="AudioControl" type="HSlider" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 41.5
offset_top = -24.0
offset_right = 369.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_glbon")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_glbon")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_glbon")
audio_bus_name = "Music"

[node name="Label" type="Label" parent="Options/AudioControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -386.0
offset_top = -40.5
offset_right = -35.0
offset_bottom = 28.5
grow_vertical = 2
pivot_offset = Vector2(-13, -11)
theme_override_font_sizes/font_size = 50
text = "Music Volume "

[connection signal="pressed" from="Main Buttons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main Buttons/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Main Buttons/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main Buttons/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Label/Back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/AudioControl" to="Options/AudioControl" method="_on_value_changed"]
